# packing

./: Cargo.toml  README.md
data/example/: 9986.1k.txt  testGraph2.gfa
data/real/: 9986.100k.txt
src/: core.rs  helper.rs  lib.rs  main.rs  reader.rs  vg_parser.rs  writer.rs
src/bit/: bit_main.rs  mod.rs
src/comp/: comp_main.rs  mod.rs
src/compress/: compress_main.rs  mod.rs
src/convert/: convert_helper.rs  convert_main.rs  helper.rs  mod.rs
src/core/: core.rs  mod.rs  reader.rs  writer.rs
src/index/: index_main.rs  index_wrapper.rs  mod.rs
src/info/: info.rs  info_helper.rs  info_main.rs  mod.rs
src/normalize/: convert_helper.rs  helper.rs  mod.rs  normalize_main.rs
src/rename/: mod.rs  rename.rs  rename_main.rs
src/stats/: mod.rs  stats_main.rs
src/view/: mod.rs  view_main.rs
tests/: bit_test.rs  cli.rs  compare.rs  convert_test.rs  index_test.rs  info_test.rs  normalize_test.rs  pb_convert.rs  read_multi.rs  read_test.rs  rename_test.rs  stats_test.rs  view_test.rs
