[package]
name = "packing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "packing_lib"
path = "src/lib.rs"

[[bin]]
name = "packing"
path = "src/main.rs"



[dependencies]
clap = "=3.0.0-beta.4"
getopts = "0.2"
zstd = "0.9"
