[package]
name = "packing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "packing_lib"
path = "src/lib.rs"

[[bin]]
name = "packing"
path = "src/main.rs"




[dependencies]
clap = "=3.0.0-beta.4"
getopts = "0.2"
zstd = "0.9"
gfaR_wrapper = {git = "https://github.com/MoinSebi/gfaR_wrapper"}
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
bitvec = "1"
byteorder = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
